--- a/rebar.config
+++ b/rebar.config
@@ -20,7 +20,7 @@
 
 {plugins, [ { rebar_covertool
             , { git
-              , "git@github.com:truqu/covertool.git"
+              , "https://github.com/truqu/covertool.git"
               , {branch, "master"}
               }
             }
@@ -30,7 +30,7 @@
 {profiles, [ { test
              , [ { deps
                  , [ { proper
-                     , {git, "git@github.com:manopapad/proper.git", {branch, "master"}}
+                     , {git, "https://github.com/manopapad/proper.git", {branch, "master"}}
                      }
                    ]
                  }
