Remove `failonly` for now

--- a/rebar.config
+++ b/rebar.config
@@ -3,10 +3,7 @@
 {cover_enabled, true}.
 
 {ct_opts, [ {logdir, "log/ct"}
-          , {ct_hooks, [ cth_readable_failonly
-                       , cth_readable_shell
-                       ]
-            }
+          , {ct_hooks, [cth_readable_shell]}
           ]
 }.
 
