Run travis tests on 21.x and 22.x (#14)
* Run travis tests on 21.1 as well

* Remove `failonly` for now

* Bump versions

--- a/rebar.config
+++ b/rebar.config
@@ -2,13 +2,7 @@
 
 {cover_enabled, true}.
 
-{ct_opts, [ {logdir, "log/ct"}
-          , {ct_hooks, [ cth_readable_failonly
-                       , cth_readable_shell
-                       ]
-            }
-          ]
-}.
+{ct_opts, [{logdir, "log/ct"}]}.
 
 {erl_opts, [ debug_info
            , warnings_as_errors
